[project]
name = "messaging-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.2.101",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "strands-agents-tools>=0.8.0",
    "strands-agents[ollama]>=1.43.0",
]

[project.scripts]
messaging-agent = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
